<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/padding"
        android:paddingRight="@dimen/padding"
        android:background="@color/textColor"
        android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/productName"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/textColor"
        android:background="@color/a0"
        android:gravity="center"
        android:text="@string/price"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/quantity"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/textColor"
        android:background="@color/a0"
        android:gravity="center"
        android:text="@string/supplier_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/supplier_phone_number"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/noItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_centerInParent="true"
        android:text="@string/noItem"
        android:layout_weight="1"/>

</RelativeLayout>